{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 19,
  "lineage": "4af7e42a-2b14-99b3-42b1-3093e67bd7bc",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mon_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkInterfaces/mon-nic",
            "internal_domain_name_suffix": "5p0bbebenzxe1doj1onn2fvrue.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "mon-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/publicIPAddresses/mon-ip",
                "subnet_id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/virtualNetworks/vnet-monitoring/subnets/subnet-main"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "mac_address": "00-22-48-3A-92-3D",
            "name": "mon-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg-monitoring",
            "virtual_machine_id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Compute/virtualMachines/vm-monitoring"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.mon_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkInterfaces/web-nic",
            "internal_domain_name_suffix": "5p0bbebenzxe1doj1onn2fvrue.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/publicIPAddresses/web-ip",
                "subnet_id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/virtualNetworks/vnet-monitoring/subnets/subnet-main"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "mac_address": "60-45-BD-6D-90-33",
            "name": "web-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-monitoring",
            "virtual_machine_id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Compute/virtualMachines/vm-web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.web_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkSecurityGroups/nsg-monitoring",
            "location": "francecentral",
            "name": "nsg-monitoring",
            "resource_group_name": "rg-monitoring",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "31.39.188.91/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "GRAFANA",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3000",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkSecurityGroups/nsg-monitoring/securityRules/GRAFANA",
            "name": "GRAFANA",
            "network_security_group_name": "nsg-monitoring",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg-monitoring",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkSecurityGroups/nsg-monitoring/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "nsg-monitoring",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-monitoring",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkSecurityGroups/nsg-monitoring/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "nsg-monitoring",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-monitoring",
            "source_address_prefix": "31.39.188.91/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mon_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/publicIPAddresses/mon-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.89.151.27",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "mon-ip",
            "resource_group_name": "rg-monitoring",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/publicIPAddresses/web-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.89.151.28",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "web-ip",
            "resource_group_name": "rg-monitoring",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/virtualNetworks/vnet-monitoring/subnets/subnet-main",
            "name": "subnet-main",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-monitoring",
            "virtual_network_name": "vnet-monitoring"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/virtualNetworks/vnet-monitoring/subnets/subnet-main",
            "network_security_group_id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkSecurityGroups/nsg-monitoring",
            "subnet_id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/virtualNetworks/vnet-monitoring/subnets/subnet-main"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9010f4fb-6e24-4d6e-8dc9-db9ade16b1a4",
            "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/virtualNetworks/vnet-monitoring",
            "location": "francecentral",
            "name": "vnet-monitoring",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-monitoring",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/virtualNetworks/vnet-monitoring/subnets/subnet-main",
                "name": "subnet-main",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/956df9e6-afd9-430a-823e-6947d17ade0e/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkSecurityGroups/nsg-monitoring"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}